<resources>
    <string name="app_name">Taehun\s MyApp</string>

    <string name="hello_world">taehun\'s Portfolio App!</string>
    <string name="action_settings">Settings</string>

    <string name="my_title">My Nanodegree Apps!</string>
    <string name="media_streamer">SPOTIFY STREAMER</string>
    <string name="super_duo1">SCORES APP</string>
    <string name="super_duo2">LIBRARY APP</string>
    <string name="ant_terminator">BUILD IT BIGGER</string>
    <string name="materialize">BACON READER</string>
    <string name="capstone">CAPSTONE:MY OWN APP</string>
    <string name="title_activity_spotify_main">SpotifyMain</string>
    <!--search part-->
    <string name="searchBtn">Search</string>
    <string name="empty_keyword">Empty keyword.</string>
    <string name="no_result_item">No Result!</string>
    <string name="title_activity_spotify_detail">SpotifyDetailActivity</string>
    <string name="title_activity_movie_main">MovieMain</string>
    <string name="title_activity_movie_detail">MovieDetail</string>
    <!--movie-->
    <string name ="popular">Most Popular</string>
    <string name ="rated">Highest Rated</string>
    <string name ="favorates">Favorites</string>
</resources>
