<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/hello_world"
        android:textSize="25dp" />

    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/layout_padding"
        android:paddingRight="@dimen/layout_padding"
        android:paddingTop="@dimen/activity_horizontal_margin">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/main_layout_buttons_margin"
            android:background="#F3A04B"
            android:text="@string/media_streamer" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/button"
            android:layout_below="@+id/button"
            android:layout_marginTop="@dimen/main_layout_buttons_margin"
            android:background="#F3A04B"
            android:text="@string/super_duo1" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/button2"
            android:layout_alignLeft="@+id/button2"
            android:layout_alignRight="@+id/button2"
            android:layout_alignStart="@+id/button2"
            android:layout_below="@+id/button2"
            android:layout_marginTop="@dimen/main_layout_buttons_margin"
            android:background="#F3A04B"
            android:text="@string/super_duo2" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/button3"
            android:layout_alignLeft="@+id/button3"
            android:layout_alignRight="@+id/button3"
            android:layout_alignStart="@+id/button3"
            android:layout_below="@+id/button3"
            android:layout_marginTop="@dimen/main_layout_buttons_margin"
            android:background="#F3A04B"
            android:text="@string/ant_terminator" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/button4"
            android:layout_alignLeft="@+id/button4"
            android:layout_alignRight="@+id/button4"
            android:layout_alignStart="@+id/button4"
            android:layout_below="@+id/button4"
            android:layout_marginTop="@dimen/main_layout_buttons_margin"
            android:background="#F3A04B"
            android:text="@string/materialize" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/button5"
            android:layout_alignLeft="@+id/button5"
            android:layout_alignRight="@+id/button5"
            android:layout_alignStart="@+id/button5"
            android:layout_below="@+id/button5"
            android:layout_marginTop="@dimen/main_layout_buttons_margin"
            android:background="#D83955"
            android:text="@string/capstone" />
    </RelativeLayout>
</LinearLayout>


